--- a/CoreDataContacts/Storyboard/Base.lproj/Main.storyboard
+++ b/CoreDataContacts/Storyboard/Base.lproj/Main.storyboard
@@ -1,24 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X9q-sW-TZo">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="Min-xZ-PiZ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="X9q-sW-TZo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RoX-ce-Lcc">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="AccentColor"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <navigationBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" name="AccentColor"/>
+                            <textAttributes key="titleTextAttributes">
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </textAttributes>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iTL-Rz-NpA" kind="relationship" relationship="rootViewController" id="WME-yu-ifR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lt2-hg-9sv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-159" y="73"/>
+        </scene>
+        <!--Contacts-->
+        <scene sceneID="MtX-lW-Iud">
+            <objects>
+                <tableViewController id="iTL-Rz-NpA" customClass="ContactsTableViewController" customModule="CoreDataContacts" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="105" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="n4I-qn-cDW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactCell" id="jzT-zz-i5C" customClass="ContactTableViewCell" customModule="CoreDataContacts" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="105"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jzT-zz-i5C" id="qEK-IB-2zC">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q3s-pf-tax">
+                                            <rect key="frame" x="5" y="10" width="404" height="85"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MockPersonImage" translatesAutoresizingMaskIntoConstraints="NO" id="mfM-TT-Qnn">
+                                                    <rect key="frame" x="24" y="7.5" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="70" id="3fb-at-mzy"/>
+                                                        <constraint firstAttribute="height" constant="70" id="JBj-Ij-sA0"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="24"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K00-kC-BXR">
+                                                    <rect key="frame" x="102" y="7.5" width="302" height="70"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="WbW-s9-QV0">
+                                                            <rect key="frame" x="8" y="15.5" width="137" height="39"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tammy Rios" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vyD-XO-tlY">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="91.5" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="thammy@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipw-GA-UPX">
+                                                                    <rect key="frame" x="0.0" y="22.5" width="137" height="16.5"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="16.5" id="QaV-og-WMe"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                                    <color key="textColor" name="Gray"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="WbW-s9-QV0" firstAttribute="centerY" secondItem="K00-kC-BXR" secondAttribute="centerY" id="AeL-x8-lCk"/>
+                                                        <constraint firstItem="WbW-s9-QV0" firstAttribute="top" secondItem="K00-kC-BXR" secondAttribute="top" constant="15.5" id="ntP-i1-MoK"/>
+                                                        <constraint firstItem="WbW-s9-QV0" firstAttribute="leading" secondItem="K00-kC-BXR" secondAttribute="leadingMargin" id="qYf-e3-HUu"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="K00-kC-BXR" firstAttribute="leading" secondItem="mfM-TT-Qnn" secondAttribute="trailing" constant="8" id="3mk-is-Nud"/>
+                                                <constraint firstItem="mfM-TT-Qnn" firstAttribute="leading" secondItem="q3s-pf-tax" secondAttribute="leading" constant="24" id="Edo-Oc-kbN"/>
+                                                <constraint firstItem="K00-kC-BXR" firstAttribute="top" secondItem="mfM-TT-Qnn" secondAttribute="top" id="VW2-HT-KwV"/>
+                                                <constraint firstItem="K00-kC-BXR" firstAttribute="centerY" secondItem="q3s-pf-tax" secondAttribute="centerY" id="c3D-9o-5qQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="K00-kC-BXR" secondAttribute="trailing" id="pFU-KU-7fF"/>
+                                                <constraint firstItem="mfM-TT-Qnn" firstAttribute="centerY" secondItem="q3s-pf-tax" secondAttribute="centerY" id="r3Q-Eg-UVh"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="q3s-pf-tax" secondAttribute="bottom" constant="10" id="8x4-me-WkB"/>
+                                        <constraint firstItem="q3s-pf-tax" firstAttribute="leading" secondItem="qEK-IB-2zC" secondAttribute="leading" constant="5" id="LhG-cf-XSX"/>
+                                        <constraint firstAttribute="trailing" secondItem="q3s-pf-tax" secondAttribute="trailing" constant="5" id="dc0-rH-GHK"/>
+                                        <constraint firstItem="q3s-pf-tax" firstAttribute="top" secondItem="qEK-IB-2zC" secondAttribute="top" constant="10" id="pV2-g7-gRn"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iTL-Rz-NpA" id="pqC-dY-fSE"/>
+                            <outlet property="delegate" destination="iTL-Rz-NpA" id="4z2-1V-rJt"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Contacts" id="R9y-fl-WuN"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VOs-Zd-54i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="656.52173913043487" y="72.991071428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MockPersonImage" width="500" height="333.5"/>
+        <namedColor name="AccentColor">
+            <color red="0.48627450980392156" green="0.28627450980392155" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Gray">
+            <color red="0.70588235294117641" green="0.71372549019607845" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
