--- a/CoreDataContacts/Storyboard/Base.lproj/Main.storyboard
+++ b/CoreDataContacts/Storyboard/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="RoX-ce-Lcc">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" name="AccentColor"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -29,6 +29,17 @@
                             <textAttributes key="titleTextAttributes">
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </textAttributes>
+                            <barButtonItemAppearance key="backButtonAppearance">
+                                <barButtonItemStateAppearance key="normal">
+                                    <textAttributes key="titleTextAttributes">
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textShadowColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    </textAttributes>
+                                </barButtonItemStateAppearance>
+                                <barButtonItemStateAppearance key="highlighted"/>
+                                <barButtonItemStateAppearance key="disabled"/>
+                                <barButtonItemStateAppearance key="focused"/>
+                            </barButtonItemAppearance>
                         </navigationBarAppearance>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -135,7 +146,11 @@
                                 <buttonConfiguration key="configuration" style="filled" cornerStyle="capsule">
                                     <backgroundConfiguration key="background" image="Add" strokeWidth="10" strokeOutset="5"/>
                                     <directionalEdgeInsets key="contentInsets" top="50" leading="50" bottom="50" trailing="0.0"/>
+                                    <color key="baseBackgroundColor" name="AccentColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <segue destination="JEC-To-J6D" kind="show" id="zNQ-BE-HEv"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Skb-Aj-eNn"/>
@@ -159,15 +174,155 @@
             </objects>
             <point key="canvasLocation" x="494" y="-600"/>
         </scene>
+        <!--Add Contact-->
+        <scene sceneID="8qg-VY-m3S">
+            <objects>
+                <viewController id="JEC-To-J6D" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s2b-Aq-ZYn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="aVh-Tf-LmT">
+                                <rect key="frame" x="25" y="119" width="364" height="447"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gW5-n2-l8y">
+                                        <rect key="frame" x="0.0" y="0.0" width="364" height="240"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XDv-4K-9cq">
+                                                <rect key="frame" x="32" y="0.0" width="300" height="240"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="240" id="VDg-xW-6Md"/>
+                                                    <constraint firstAttribute="width" constant="300" id="sPK-8k-OhL"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" backgroundImage="User"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="XDv-4K-9cq" firstAttribute="centerX" secondItem="gW5-n2-l8y" secondAttribute="centerX" id="DVS-Da-i5N"/>
+                                            <constraint firstItem="XDv-4K-9cq" firstAttribute="centerY" secondItem="gW5-n2-l8y" secondAttribute="centerY" id="Etz-f2-q1p"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R7m-bj-1wz">
+                                        <rect key="frame" x="0.0" y="255" width="364" height="54"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7dK-Es-Mjp">
+                                                <rect key="frame" x="10" y="10" width="344" height="34"/>
+                                                <color key="backgroundColor" name="LightGray"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" name="LightGray"/>
+                                        <constraints>
+                                            <constraint firstItem="7dK-Es-Mjp" firstAttribute="top" secondItem="R7m-bj-1wz" secondAttribute="top" constant="10" id="9vv-da-lKF"/>
+                                            <constraint firstAttribute="bottom" secondItem="7dK-Es-Mjp" secondAttribute="bottom" constant="10" id="EAQ-lb-ldz"/>
+                                            <constraint firstAttribute="height" constant="54" id="Vjw-yp-S9k"/>
+                                            <constraint firstAttribute="trailing" secondItem="7dK-Es-Mjp" secondAttribute="trailing" constant="10" id="d3L-r4-QPK"/>
+                                            <constraint firstItem="7dK-Es-Mjp" firstAttribute="leading" secondItem="R7m-bj-1wz" secondAttribute="leading" constant="10" id="jG8-9y-HAa"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NIV-fy-piG">
+                                        <rect key="frame" x="0.0" y="324" width="364" height="54"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="udb-C8-If0">
+                                                <rect key="frame" x="10" y="10" width="344" height="34"/>
+                                                <color key="backgroundColor" name="LightGray"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" name="LightGray"/>
+                                        <constraints>
+                                            <constraint firstItem="udb-C8-If0" firstAttribute="leading" secondItem="NIV-fy-piG" secondAttribute="leading" constant="10" id="6lW-UT-95Q"/>
+                                            <constraint firstAttribute="trailing" secondItem="udb-C8-If0" secondAttribute="trailing" constant="10" id="Jfp-fv-wjn"/>
+                                            <constraint firstItem="udb-C8-If0" firstAttribute="top" secondItem="NIV-fy-piG" secondAttribute="top" constant="10" id="RcU-lF-AOf"/>
+                                            <constraint firstAttribute="height" constant="54" id="epj-Vi-K3s"/>
+                                            <constraint firstAttribute="bottom" secondItem="udb-C8-If0" secondAttribute="bottom" constant="10" id="pH0-fh-NwV"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zKH-yF-inJ">
+                                        <rect key="frame" x="0.0" y="393" width="364" height="54"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tOb-16-Jae">
+                                                <rect key="frame" x="10" y="10" width="344" height="34"/>
+                                                <color key="backgroundColor" name="LightGray"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" name="LightGray"/>
+                                        <constraints>
+                                            <constraint firstItem="tOb-16-Jae" firstAttribute="top" secondItem="zKH-yF-inJ" secondAttribute="top" constant="10" id="N49-bh-a33"/>
+                                            <constraint firstAttribute="trailing" secondItem="tOb-16-Jae" secondAttribute="trailing" constant="10" id="NIK-BG-OrW"/>
+                                            <constraint firstAttribute="bottom" secondItem="tOb-16-Jae" secondAttribute="bottom" constant="10" id="Uyt-ud-tk6"/>
+                                            <constraint firstItem="tOb-16-Jae" firstAttribute="leading" secondItem="zKH-yF-inJ" secondAttribute="leading" constant="10" id="c27-cE-joz"/>
+                                            <constraint firstAttribute="height" constant="54" id="koI-8W-Atq"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" role="primary" translatesAutoresizingMaskIntoConstraints="NO" id="n1D-IC-81P">
+                                <rect key="frame" x="25" y="623" width="364" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="nTo-5Z-J2N"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Save Contact" cornerStyle="large">
+                                    <color key="baseBackgroundColor" name="AccentColor"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2U5-S9-FeX"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aVh-Tf-LmT" firstAttribute="top" secondItem="2U5-S9-FeX" secondAttribute="top" constant="31" id="1jr-wJ-d9x"/>
+                            <constraint firstItem="2U5-S9-FeX" firstAttribute="trailing" secondItem="n1D-IC-81P" secondAttribute="trailing" constant="25" id="3K8-T0-FRl"/>
+                            <constraint firstItem="2U5-S9-FeX" firstAttribute="trailing" secondItem="aVh-Tf-LmT" secondAttribute="trailing" constant="25" id="7Nz-0I-1ae"/>
+                            <constraint firstItem="n1D-IC-81P" firstAttribute="top" secondItem="zKH-yF-inJ" secondAttribute="bottom" constant="57" id="HH4-ws-WZ1"/>
+                            <constraint firstItem="aVh-Tf-LmT" firstAttribute="leading" secondItem="2U5-S9-FeX" secondAttribute="leading" constant="25" id="PdY-dr-JU9"/>
+                            <constraint firstItem="n1D-IC-81P" firstAttribute="leading" secondItem="2U5-S9-FeX" secondAttribute="leading" constant="25" id="WkS-Y3-SLs"/>
+                            <constraint firstItem="2U5-S9-FeX" firstAttribute="bottom" secondItem="n1D-IC-81P" secondAttribute="bottom" constant="179" id="ncu-Ff-MAP"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Contact" id="dYS-ur-49k">
+                        <barButtonItem key="backBarButtonItem" title="sdasdasd" id="krm-Qf-OOz"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CzI-9d-y0z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1214.4927536231885" y="-600"/>
+        </scene>
     </scenes>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="Add" width="391" height="391"/>
         <image name="MockPersonImage" width="500" height="333.5"/>
+        <image name="User" width="430" height="340.5"/>
         <namedColor name="AccentColor">
             <color red="0.48627450980392156" green="0.28627450980392155" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gray">
             <color red="0.70588235294117641" green="0.71372549019607845" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="LightGray">
+            <color red="0.95294117647058818" green="0.95686274509803915" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
